--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tailwindcss -i ./input.css -o ./css/style.css --watch "
+    "build": "npx tailwindcss -i ./input.css -o ./dist/style.css --watch "
   },
   "keywords": [],
   "author": "",
